# kxxstg

./: .gitignore  COPYING  README.md
w/: CMakeLists.txt  w.sln
w/nbug/: CMakeLists.txt  nbug.vcxproj  nbug.vcxproj.filters
w/nbug/al/: afile.cc  afile.h  aplayer.cc  aplayer.h  dir.cmake  midi.cc  midi.h  mixing_frac.h  oga.cc
w/nbug/core/: buf.h  callback.h  debug.cc  debug.h  debug_.h  def.h  dir.cmake  dll_load.cc  dll_load.h  env.cc  env.h  file.cc  file.h  huffman.h  ini.cc  ini.h  missing.h  obj.cc  obj.h  path.cc  path.h  ref.cc  ref.h  str.cc  str.h  str_array.cc  thread.cc  thread.h  time.cc  time.h  translate.cc  translate.h  zip.cc  zip.h
w/nbug/ex/: async_delete.cc  async_delete.h  fps_calc.cc  fps_calc.h  lua_state.cc  lua_state.h  path_indexer.cc  path_indexer.h
w/nbug/gl/: color.cc  color.h  dir.cmake  fbo.cc  fbo.h  gl_exts.cc  gl_exts.h  graphics.cc  graphics.h  graphics_.cc  graphics_.h  graphics_def.h  image.cc  image.h  private.h  rect.h  shader.h  static_3d.cc  static_3d.h  tex.h
w/nbug/gl/font/: font.cc  font.h  font_.h  font_loader.h  ft_font_loader.cc  pic_font_loader.cc  sys_font_loader.cc
w/nbug/input/: dir.cmake  joystick.cc  joystick.h  keyboard.cc  keyboard.h
w/nbug/math/: bezier.h  dir.cmake  fft.h  fixed.cc  fixed.h  math.cc  math.h
w/nbug/tl/: array.h  array2.h  list.h  map.h  set.h  simple_list.h  stack.h  str_array.h
w/nbug/ui/: IListControl.h  button.cc  button.h  dir.cmake  menu.cc  menu.h  pane.cc  pane.h  pane_.h  pane_stack.cc  pane_stack.h  themes.cc  themes.h  win.cc  win.h  win_.h
w/z_kxx/: CMakeLists.txt  globals.cc  globals.h  z_kxx.vcxproj  z_kxx.vcxproj.filters
w/z_kxx/boss/: boss.cc  boss.h  boss_script.cc  boss_script.h
w/z_kxx/boss/a/: boss_a.cc  boss_a.h  boss_a_mid.cc  boss_a_mid.h  boss_a_move.cc  boss_a_move.h  boss_a_na1.cc  boss_a_na1.h  boss_a_pet.cc  boss_a_pet.h  boss_a_sc1.cc  boss_a_sc1.h  boss_a_sc1_bg.cc  boss_a_sc1_bg.h  boss_a_sc2.cc  boss_a_sc2.h  boss_a_sc3.cc  boss_a_sc3.h  boss_a_sc4.cc  boss_a_sc4.h  boss_a_sc5.cc  boss_a_sc5.h
w/z_kxx/boss/b/: boss_b.cc  boss_b.h  boss_b_move.cc  boss_b_move.h  boss_b_na1.cc  boss_b_na1.h  boss_b_sc1.cc  boss_b_sc1.h
w/z_kxx/drop/: drop.cc  drop.h  drop_def.h
w/z_kxx/effect/: fade.cc  fade.h  lens_effect.cc  lens_effect.h  pass2.cc  pass2.h  simple_fade.cc  simple_fade.h  zizo_fade.cc  zizo_fade.h
w/z_kxx/enemy/: add_enemy.cc  enemy.cc  enemy.h  enemy_0.cc  enemy_0.h  enemy_1.cc  enemy_1.h  enemy_2.cc  enemy_2.h  enemy_3.cc  enemy_3.h  frozen_block.cc  frozen_block.h  stage_bonus.cc  stage_bonus.h  wild_flower.cc  wild_flower.h
w/z_kxx/ex/: kxx01.nsi  lua_sprite.cc.del  lua_sprite.h  lua_support.cc.del  lua_support.h  pack_kxx.bat
w/z_kxx/main/: config_dialog.cc  kxx.rc  kxxwin.cc  kxxwin.h  main.cc  options.cc  options.h  resource.h
w/z_kxx/player/: player.cc  player.h  player_a.cc  player_a.h  player_a_sc.cc  player_a_sc.h  player_a_shot0.cc  player_a_shot0.h  player_a_shot1.cc  player_a_shot1.h  player_b.cc  player_b.h  player_b_sc.cc  player_b_sc.h  player_b_shot0.cc  player_b_shot0.h  player_b_shot1.cc  player_b_shot1.h
w/z_kxx/res/: README.txt
w/z_kxx/shot/: accelerate_shot.cc  accelerate_shot.h  comet_shot.cc  comet_shot.h  debug_shot.h  enemy_shots.cc  enemy_shots.h  lapillus_shot.cc  lapillus_shot.h  laser.cc  laser.h  laser_fan.cc  laser_fan.h  lua_shot.cc  lua_shot.h  petal_shot.cc  petal_shot.h  shot.cc  shot.h  uniform_shot.cc  uniform_shot.h  volcano_shot.cc  volcano_shot.h  worm_shot.cc  worm_shot.h
w/z_kxx/sprite/: ani_spark.cc  ani_spark.h  avatar.cc  avatar.h  boss_spread.h  corpse.cc  corpse.h  dandelions.cc  dandelions.h  dynamic_pic.cc  dynamic_pic.h  float_text.cc  float_text.h  galaxy.cc  galaxy.h  general_aura.cc  general_aura.h  ring.cc  ring.h  sc_name.cc  sc_name.h  scroll.cc  scroll.h  shot_crash.cc  shot_crash.h  simple_sprite.cc  simple_sprite.h  spark1.cc  spark1.h  sprite.cc  sprite.h  static_pic.cc  static_pic.h  unit.h
w/z_kxx/stage/: kxx_dialog.cc  kxx_dialog.h  simple_stage_bg.cc  simple_stage_bg.h  stage.cc  stage.h  test_stage_bg.cc  test_stage_bg.h  time_line.cc  time_line.h
w/z_kxx/stage/1/: stage_1.cc  stage_1.h
w/z_kxx/stage/2/: stage_2.cc  stage_2.h
w/z_kxx/stage/3/: stage_3.cc  stage_3.h
w/z_kxx/stage/4/: stage_4.cc  stage_4.h
w/z_kxx/stage/5/: gallery.cc  gallery.h  stage_5.cc  stage_5.h
w/z_kxx/stage/6/: stage_6.cc  stage_6.h
w/z_kxx/stage/7/: stage_7.cc  stage_7.h
w/z_kxx/ui/: confirm_menu.cc  confirm_menu.h  credits_screen.cc  credits_screen.h  digital_roller.cc  digital_roller.h  ending_screen.cc  ending_screen.h  main_menu.cc  main_menu.h  options_menu.cc  options_menu.h  pause_menu.cc  pause_menu.h  player_menu.cc  player_menu.h  replay_slot_menu.cc  replay_slot_menu.h  stage_menu.cc  stage_menu.h  top_score_screen.cc  top_score_screen.h  ui_base.cc  ui_base.h
w/z_kxx/util/: actor.cc  actor.h  ani.cc  ani.h  ani5.cc  ani5.h  cd_counter.h  proc_image.h  render_list.cc  render_list.h  util_func.h
w/z_tools/: CMakeLists.txt  apng.cc  apng.vcxproj  nblang.cc  nblang.vcxproj  nbpack.cc  nbpack.vcxproj
